--- a/player.html
+++ b/player.html
@@ -173,14 +173,18 @@
             <div class="flex justify-between items-center mb-6 flex-none">
                 <h2 class="text-2xl font-bold gradient-text">访问验证</h2>
             </div>
-            <div class="mb-6">
+            <div>
                 <p class="text-gray-300 mb-4">请输入密码继续访问</p>
                 <form id="passwordForm" onsubmit="handlePasswordSubmit(); return false;">
+                    <p id="passwordError" class="text-red-500 mb-3 hidden">密码错误，请重试</p>
                     <input type="text" name="username" id="username" autocomplete="username" style="display:none" tabindex="-1" aria-hidden="true">
                     <input type="password" id="passwordInput" class="w-full bg-[#111] border border-[#333] text-white px-4 py-3 rounded-lg focus:outline-none focus:border-white transition-colors" placeholder="密码..." autocomplete="new-password">
                     <button id="passwordSubmitBtn" type="submit" class="mt-4 w-full bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">提交</button>
                 </form>
-                <p id="passwordError" class="text-red-500 mt-2 hidden">密码错误，请重试</p>
+                <div class="text-center mt-6">
+                    <span class="text-gray-400">还没有访问密码？</span>
+                    <a href="{{PASSWORD_URL}}" target="_blank" class="text-blue-400 hover:text-blue-300 transition-colors" id="getPasswordLink">点击获取</a>
+                </div>
             </div>
         </div>
     </div>
@@ -339,6 +343,7 @@
         // 注入服务器端环境变量 (将由服务器端替换)
         // PASSWORD 变量将在这里被服务器端注入
         window.__ENV__.PASSWORD = "{{PASSWORD}}";
+        window.__ENV__.PASSWORD_URL = "{{PASSWORD_URL}}";
 
         // 修复 home 跳转
         document.addEventListener('DOMContentLoaded', function() {
